--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,14 +46,17 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Bottom Navigation menu
+    implementation 'com.etebarian:meow-bottom-navigation:1.2.0'
 
     implementation("androidx.recyclerview:recyclerview:1.3.0")
     // For control over item selection of both touch and mouse driven selection
@@ -61,5 +64,6 @@ dependencies {
     //Card view
     implementation 'androidx.cardview:cardview:1.0.0'
     //Lottie Animation View
-    implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.airbnb.android:lottie:3.7.0'
+
 }
