--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.21'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0-Beta'
     }
     repositories {
         mavenCentral()
